# Segmentation-detection

pointcloud-segmentation-stub/: MODEL_CHOICES.md  NOTICE  README.md  SETUP_GITHUB.md  SETUP_REPO.md  extract_patches.py  pyproject.toml  setup_github_repo.py
pointcloud-segmentation-stub/LICENSES/: DATASET_CC-BY-SA-4.0.md  LICENSE  README.md
pointcloud-segmentation-stub/data/ODMSemantic3D/: patches_waterbury_roads_2.npz
pointcloud-segmentation-stub/pointcloud_segmentation/: EDA.ipynb  __init__.py  download_and_process.py  model.py  patch_extraction.py  train.py  utils.py
pointcloud-segmentation-stub/tests/: test_dataset.py  test_model.py
