[tool.poetry]
name = "pointcloud-segmentation-stub"
version = "0.1.0"
description = "A stub project for pointcloud segmentation using deep learning"
authors = ["Hussain Abass"]
readme = "README.md"
license = "MIT"
packages = [{include = "pointcloud_segmentation"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.0"
numpy = "^1.24.0"
laspy = {extras = ["lazrs"], version = "^2.5.0"}
ipykernel = "^6.25.0"
jupyter = "^1.0.0"
matplotlib = "^3.7.0"
scipy = "^1.11.0"
scikit-learn = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

